@@ -1,24 +1,19 @@
 package org.example;
 
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
 
 public class Main {
     public static void main(String[] args) {
-        Carrera carrera = new Carrera();
-        List<Categoria> categorias = carrera.crearCategorias();
+        Race race = new Race();
+        List<Category> categories = race.createCategories();
 
-        Participante participante = new Participante(1, 45084386, "Imanol", "Suppo",
+        Participant participant = new Participant(1, 45084386, "Imanol", "Suppo",
                 19, "351 478 1111", "11111111", "B-");
 
-        carrera.inscribirParticipante(categorias.get(0), participante);
-        carrera.inscribirParticipantesAlAzar();
+        race.registerParticipant(categories.getFirst(), participant);
+        race.registerRandomParticipants();
 
-        carrera.mostrarParticipantesPorCategoria(categorias.get(0));
-        carrera.calcularMontoTotalRecaudado();
+        race.displayParticipantsByCategory(categories.getFirst());
+        race.calculateTotalAmountCollected();
     }
-
 }
-
-
